--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -3,14 +3,14 @@
 <html lang='en'>
 	<head>
 		<meta charset='utf-8'>
-		<title>{{template "title" .}} - Calendar</title>
+		<title>{{template "title" .}} - Eventbox</title>
 		<link rel='stylesheet' href='/static/css/main.css'>
 		<link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
 		<link rel='stylesheet' href='https://fonts.googleapis.com//css?family=Ubuntu+Mono:400,700'>
 	</head>
 	<body>
 		<header>
-			<h1><a href='/'>Calendar</a></h1>
+			<h1><a href='/'>Хранилище заметок</a></h1>
 		</header>
 		<nav>
 			<a href="/">Домашняя страница</a>
